# DAG-Rider

./: .gitignore  LICENSE  README.md
src/consensus/: CMakeLists.txt  communication.hpp  consensus.cpp  consensus.hpp  dag.cpp  dag.hpp  hash.hpp  main.cpp  state.cpp  state.hpp
src/model/: CMakeLists.txt  block.cpp  block.hpp  committee.cpp  committee.hpp  main.cpp  validator.cpp  validator.hpp  vertex.cpp  vertex.hpp
src/network/: CMakeLists.txt  broadcaster.cpp  broadcaster.hpp  error.cpp  error.hpp  main.cpp  receiver.hpp
src/node/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
src/transaction/: CMakeLists.txt  block_builder.cpp  block_builder.hpp  blockbuilder.cpp  blockbuilder.hpp  coordinator.cpp  coordinator.hpp  main.cpp
src/vertex/: CMakeLists.txt  main.cpp  vertex_broadcaster.cpp  vertex_broadcaster.hpp  vertex_coordinator.cpp  vertex_coordinator.hpp  vertex_message_handler.cpp  vertex_message_handler.hpp
